/*
Copyright (c) 2020 TriggerMesh Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/triggermesh/eventstore/pkg/protob";

package protob;

enum ScopeChoice {
  Instance = 0;
  Bridge = 1;
  Global = 2;
}

message ScopeType {
  ScopeChoice type = 1;
  string bridge = 2;
  string instance = 3;
}

message LocationType {
  ScopeType scope = 1;
  string key = 2;
}

message SaveRequest {
  LocationType location = 1;
  int32 ttl = 2;
  string value = 3;
}

message SaveResponse {}

message LoadRequest {
  LocationType location = 1;
}

message LoadResponse {
  string value = 1;
}

message DeleteRequest {
  LocationType location = 1;
}

message DeleteResponse {}

// EventStore interface
service EventStore {
  // Save variable to storage
  rpc Save(SaveRequest) returns (SaveResponse) {}

  // Load variable from storage
  rpc Load(LoadRequest) returns (LoadResponse) {}

  // Delete variable from storage
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
